--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -11,31 +11,39 @@
 
                     <div class="form-group">
                         <label for="nome">Nome</label>
-                        <input type="text" class="form-control" name="nome" id="nome" placeholder="Seu nome">
+                        <input [(ngModel)]="usuario.nome" type="text" class="form-control" name="nome" id="nome" placeholder="Seu nome">
 
                         <div class="form-group">
-                            <label for="usuario">Usuario</label>
-                            <input type="text" class="form-control" name="usuario" id="usuario" placeholder="Seu usuario">
+                            <label for="usuario">Email</label>
+                            <input [(ngModel)]="usuario.email" type="text" class="form-control" name="usuario" id="usuario" placeholder="Seu usuario">
                         </div>
 
-                        <div class="form-group">
-                            <label for="foto">Link da foto</label>
-                            <input type="text" class="form-control" name="foto" id="foto" placeholder="Link da sua foto">
-                        </div>
 
                         <div class="form-group">
                             <label for="senha">Senha</label>
-                            <input type="password" class="form-control" name="senha" id="senha" placeholder="Sua senha">
+                            <input (input)='confirmSenha($event)' type="password" class="form-control" name="senha" id="senha" placeholder="Sua senha">
                         </div>
 
                         <div class="form-group">
                             <label for="confirmSenha">Confirmar Senha</label>
-                            <input type="password" class="form-control" name="confirmSenha" id="confirmSenha" placeholder="Confirme sua senha">
+                            <input [(ngModel)]="usuario.senha" type="password" class="form-control" name="confirmSenha" id="confirmSenha" placeholder="Confirme sua senha">
                         </div>
 
                         <div class="form-group">
-                            <label for="tipo">Tipo do usuario</label>
-                            <select name="tipo" id="tipo" class="form-control">
+                            <label for="dataNascimento">Data de Nascimento</label>
+                            <input 
+                            class="form-control" 
+                            type="date" 
+                            name="dataNascimento" 
+                            id="dataNascimento" 
+                            placeholder="dd/mm/aaaa"
+                            [(ngModel)]='usuario.dataNascimento' />
+                        </div>
+    
+                        <div class="form-group">
+                            <label  for="tipo">Tipo do usuario</label>
+                            <select (change)="tipoUser($event)"
+                            name="tipo" id="tipo" class="form-control">
                             <option value="">Selecione o tipo de usuario</option>
                             <option value="normal">Normal</option>
                             <option value="admin">Admin</option>
@@ -46,7 +54,7 @@
 
                         <div class="d-flex justify-content-center">
                             <button class="btn btn-danger mr-4" routerLink="/entrar">Cancelar</button>
-                            <button class="btn btn-success">Cadastrar</button>
+                            <button class="btn btn-success" (click)="cadastrar()" >Cadastrar</button>
                         </div>
 
 
