--- a/src/app/entrar/entrar.component.html
+++ b/src/app/entrar/entrar.component.html
@@ -1,36 +1,47 @@
 <div class="container-fluid">
+   
+    <div class="row d-flex align-items-lg-center">
 
-    <div class="row d-flex align-items-center">
+        <div class="col-md-6" id="img-bg"></div>
+
 
         <div class="col-md-6">
-            
+
             <div class="row d-flex justify-content-center">
-                <div class="col-md-6">
-                    <h1 class="text-center m-1">Entrar</h1>
+                <div class="col-md-6" id="ft-color">
+                    <div class="color">
+                    <h1 class="text-center mb-3">Entrar</h1>
+                        </div>
                     <div class="form-group">
-                        <label for="usuario">Usuario</label>
-                        <input type="text" class="form-control" name="usuario" id="usuario" placeholder="Seu usuario">
+                        <label for="usuario">Usuário</label>
+                        <input [(ngModel)]='usuarioLogin.email' class="form-control" type="text" name="usuario" id="usuario"
+                        placeholder="Seu Usuário">
                     </div>
+
                     <div class="form-group">
-                        <label for="senha">Senha</label>
-                        <input type="password" class="form-control" name="senha" id="senha" placeholder="Sua senha">
+                        <label for="usuario">Senha</label>
+                        <input [(ngModel)]='usuarioLogin.senha' class="form-control" type="password" name="senha" id="senha"
+                        placeholder="Sua Senha">
                     </div>
 
                     <div class="d-flex justify-content-center">
-                        <button class="btn btn-success" type="submit" routerLink="/sobre-nos">Entrar</button>
+                        <button type="submit" class="btn border-secondary"  (click)='entrar()'>Entrar</button>
                     </div>
 
                     <hr class="mt-5 mb-5">
-                    <p class="text-center">Nao tem uma conta?
-                        <a routerLink="/cadastrar">Cadastre-se</a>
+
+                    <p class="text-center">
+                        Não tem uma conta? <a routerLink="/cadastrar">Cadastre-se</a>
                     </p>
+
                 </div>
-
+           
             </div>
-        </div>
 
-        <div class="col-md-6" id="img-bg">
         </div>
+       
+
+      
     </div>
 
 </div>
