--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -17,7 +17,17 @@
                             <label for="usuario">Email</label>
                             <input [(ngModel)]="usuario.email" type="text" class="form-control" name="usuario" id="usuario" placeholder="Seu usuario">
                         </div>
-
+                        <div class="form-group">
+                            <label for="foto">Link da Foto</label>
+                            <input
+                              class="form-control"
+                              type="text"
+                              name="foto"
+                              id="foto"
+                              placeholder="Link da sua foto"
+                              [(ngModel)]='usuario.foto'
+                            />
+                          </div>
 
                         <div class="form-group">
                             <label for="senha">Senha</label>
