--- a/src/app/entrar/entrar.component.html
+++ b/src/app/entrar/entrar.component.html
@@ -13,7 +13,7 @@
                     <h1 class="text-center mb-3">Entrar</h1>
                         </div>
                     <div class="form-group">
-                        <label for="usuario">Usuário</label>
+                        <label for="usuario">E-mail</label>
                         <input [(ngModel)]='usuarioLogin.email' class="form-control" type="text" name="usuario" id="usuario"
                         placeholder="Seu Usuário">
                     </div>
