--- a/src/app/tema/tema.component.html
+++ b/src/app/tema/tema.component.html
@@ -17,7 +17,7 @@
               <input [(ngModel)]='tema.tema' type="text" class="form-control" id="tema" placeholder="Digite o tema" >
             </div>
             <div class="form-group">
-              <input [(ngModel)]='tema.descricao' type="text" class="form-control" id="descricao" placeholder="Ditige a descrição do tema" >
+              <input type="text" class="form-control" id="descricao" placeholder="Digite a descrição do tema" [(ngModel)]='tema.descricao' >
             </div>
            
   
@@ -58,10 +58,10 @@
             <th>{{tema.id}}</th>
            
               <td>{{tema.descricao}}</td>
-              <!--td class="d-flex justify-content-center">
+              <td class="d-flex justify-content-center">
                 <button class="btn btn-dark mr-4" [routerLink]="['/tema-edit', tema.id]">Editar</button>
-                <button clas"s="btn btn-danger" [routerLink]="['/tema-delete', tema.id]">Apagar</button>
-              </td-->
+                <button class="btn btn-danger" [routerLink]="['/tema-delete', tema.id]">Apagar</button>
+              </td>
             </tr>
           </tbody>
         </table>
