--- a/src/app/tema/tema.component.html
+++ b/src/app/tema/tema.component.html
@@ -17,7 +17,7 @@
               <input [(ngModel)]='tema.tema' type="text" class="form-control" id="tema" placeholder="Digite o tema" >
             </div>
             <div class="form-group">
-              <input type="text" class="form-control" id="descricao" placeholder="Digite a descrição do tema" [(ngModel)]='tema.descricao' >
+              <input [(ngModel)]='tema.descricao' type="text" class="form-control" id="descricao" placeholder="Digite a descrição do tema"  >
             </div>
            
   
@@ -48,15 +48,15 @@
           <thead>
             <tr>
               <th scope="col">#</th>
-           
               <th scope="col">Tema</th>
+              <th scope="col">Descrição</th>
               <th scope="col" class="text-center">DE</th>
             </tr>
           </thead>
           <tbody>
             <tr *ngFor='let tema of listaTemas'>
             <th>{{tema.id}}</th>
-           
+            <td>{{tema.tema}}</td>
               <td>{{tema.descricao}}</td>
               <td class="d-flex justify-content-center">
                 <button class="btn btn-dark mr-4" [routerLink]="['/tema-edit', tema.id]">Editar</button>
