--- a/src/styles.css
+++ b/src/styles.css
@@ -4,3 +4,45 @@
     
 
 }
+.testimonials{
+    width:60%;
+    margin: auto;
+    padding-top: 10px;
+  
+}
+
+.testimonials-col{
+    flex-basis: 44%;
+    border-radius: 10px;
+    margin-bottom: -1%;
+    text-align: left;
+    padding: 5px;
+    display: flex;
+}
+
+.tobias{
+    margin-left: 7%;
+    margin-right: 40%;
+    text-align: left;
+    display: flex;
+}
+
+.nomefeed{
+    margin-left: -7%;
+}
+
+.testimonials-col img{
+    height: 90px;
+    margin-left: 5px;
+    margin-right: 30px;
+    border-radius: 50%;
+
+}
+
+.font-20{
+    font-size: 20pt;
+}
+
+.ftcolor{
+   color: white;
+}
