--- a/src/app/entrar/entrar.component.html
+++ b/src/app/entrar/entrar.component.html
@@ -1,31 +1,35 @@
-<div class="container-fluid">
+
+<body>
+    
+    <div class="container">
    
-    <div class="row d-flex align-items-lg-center">
-
-        <div class="col-md-6" id="img-bg"></div>
-
-
-        <div class="col-md-6">
-
-            <div class="row d-flex justify-content-center">
-                <div class="col-md-6" id="ft-color">
-                    <div class="color">
-                    <h1 class="text-center mb-3">Entrar</h1>
+        <div class="row d-flex align-items-lg-center">
+    
+            <div class="col-md-6 d-flex justify-content-center" id="img-bg"></div>
+            
+    
+    
+            <div class="col-md-6 bg-white" id="border">
+    
+                <div class="row d-flex justify-content-center">
+                    <div class="col-md-6" id="ft-color">
+                        <div class="color">
+                    <h1 class="text-center mb-3">Login</h1>
                         </div>
                     <div class="form-group">
                         <label for="usuario">E-mail</label>
                         <input [(ngModel)]='usuarioLogin.email' class="form-control" type="text" name="usuario" id="usuario"
-                        placeholder="Seu Usuário">
+                        >
                     </div>
 
                     <div class="form-group">
                         <label for="usuario">Senha</label>
                         <input [(ngModel)]='usuarioLogin.senha' class="form-control" type="password" name="senha" id="senha"
-                        placeholder="Sua Senha">
+                        >
                     </div>
 
                     <div class="d-flex justify-content-center">
-                        <button type="submit" class="btn border-secondary"  (click)='entrar()'>Entrar</button>
+                        <button type="submit" class="btn border-secondary"  (click)='entrar()'>Logar</button>
                     </div>
 
                     <hr class="mt-5 mb-5">
@@ -38,10 +42,15 @@
            
             </div>
 
-        </div>
        
-
+        </div>
+      
       
     </div>
 
-</div>
+    </div>
+
+ 
+    
+
+</body> 
