--- a/src/app/contruindo-ofeed/contruindo-ofeed.component.css
+++ b/src/app/contruindo-ofeed/contruindo-ofeed.component.css
@@ -1,4 +1,7 @@
+@import url(http://fonts.cdnfonts.com/css/bubbleboddy-neue-trial);
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,600,600italic,700italic);
+
+
 
 
 .nav-tabs{
@@ -7,11 +10,12 @@
 
 #div1{
     background-color: rgb(9,18,58);
-    width: 33.3%;
     float: right;
-    overflow-y:scroll;
     height: 100vh;
      
+}
+.imgsub{
+
 }
 
 .tama{
@@ -19,15 +23,21 @@
 }
 
 #div2{
-    width: 33.3%;
+  
     background-color: rgb(9,18,58);
+    height: 100vh;
 }
 
 #div3{
     background-color: rgb(9,18,58);
-    width: 23.3%;
+    width: 33%;
     float: left;
     height: 100vh;
+  
+}
+
+.respon-1{
+
 }
 
 .font-20{
@@ -65,4 +75,58 @@
     font-size:24px;
     margin: 0 0 0 100px;
   }
+  @media (max-width: 870px) {
+  #div1{
+    position: static;
+    width: 100%;
+    height: 100%;
+  }
+  #div3{
+    position: static;
+    width: 100%;
+  }
+
+
   
+
+}
+
+ul.social-network{
+    list-style: none;
+    display: inline;
+    padding: 0;
+}
+ul.social-network li{
+    display: inline;
+    margin: 0;
+    padding: 3px;
+}
+
+
+
+
+.fa{
+    font-size: 25pt;
+    color: white;
+    padding: 10px;
+  }
+
+.fa-linkedin-square:hover{
+    color:#0072b1;
+}
+
+
+.fa-instagram:hover{
+    background: linear-gradient(180deg, rgba(251,255,0,1) 0%,  rgba(255,0,221,1) 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+
+
+.fa-envelope-o:hover{
+    background: linear-gradient(180deg, rgb(255, 0, 0) 0%,  rgb(229, 255, 0) 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
