--- a/src/app/contruindo-ofeed/contruindo-ofeed.component.html
+++ b/src/app/contruindo-ofeed/contruindo-ofeed.component.html
@@ -33,75 +33,117 @@
       </div>
     </div>
   </div>
-  <div id="div1" class="col-4 sticky-top ftcolor">
+
+  <!-- Começo do canto esquerdo do feed -->
+  <div id="div1" class="col-md-3  col-sm-12 respon-1 sticky-top ftcolor">
 
     <div class="margintoptitulo">
       <div class="justify-content-center text-center">
           <div><h3>O MAIS FURADOS</h3></div>
-          <div class="marginsub70"><h5> Trummer </h5> </div>
-          <div class="marginsub70 text-left" ><p>Os peixes são animais vertebrados, 
+            <div class="marginsub70"><h5> Trummer </h5> </div>
+                <div class="marginsub70 text-left" ><p>Os peixes são animais vertebrados, 
               aquáticos, tipicamente ectotérmicos, que possuem o corpo fusiforme,
-               os membros transformados em barbatanas ou nadadeiras ...</p></div>
-      </div>
+               os membros transformados em barbatanas ou nadadeiras ...</p>
+                </div>
+            </div>
 
-      <div class="justify-content-center text-center">
-        <div class="marginsub70"><h5> Modesto </h5> </div>
-        <div class="marginsub70 text-left" ><p>Os peixes são animais vertebrados, 
+        <div class="justify-content-center text-center">
+            <div class="marginsub70"><h5> Modesto </h5> </div>
+                 <div class="marginsub70 text-left" ><p>Os peixes são animais vertebrados, 
             aquáticos, tipicamente ectotérmicos, que possuem o corpo fusiforme,
              os membros transformados em barbatanas ou nadadeiras ...</p></div>
+        </div>
 
-        
+        <div>
+          <div class="container">
+            <div class="row">
+              <div class="col-md-12 d-flex justify-content-center">
+                <ul class="social-network m-0">
+                  <li>
+                    <a
+                      href="https://mail.google.com/mail/u/0/#inbox?compose=new"
+                      target="_blank"
+                      class="icoGitHub"
+                    >
+                      <i class="fa fa-envelope-o" aria-hidden="true"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.linkedin.com/feed/"
+                      target="_blank"
+                      class="icoLinkedin"
+                    >
+                      <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.instagram.com/generationbrasil/"
+                      target="_blank"
+                      class="icoInstagram"
+                    >
+                      <i class="fa fa-instagram" aria-hidden="true"></i>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="footer-copyright text-center">
+              <span class="text-light">furando a bolha ©</span>
+            </div>
+          </div>
+
+        </div>
+
     </div>
 
-    </div>
-
+   
   </div>
-    <div id="div3"  class="col-3 sticky-top ftcolor">
+   <!-- Final do canto esquerdo do feed -->
+
+
+   <!-- Começo do canto direito do feed-->
+    <div id="div3"  class="col-md-3 col-sm-12  sticky-top ftcolor">
         <section class="testimonials ml-">
             <div class="row">
                 
             </div>
-            <div class="row margintopimg">
-                <div class="testimonials-col">
-                <img src="assets/img/gato1.png">
-                <div class=" font-20 nomefeed mt-4">
-                    <h3>Christine Berley</h3>
+                <div class="row margintopimg justify-content-center">
+                    <div class="testimonials-col">
+                        <img class="imgsub" src="assets/img/gato1.png">
+                        <div class=" font-20 nomefeed mt-4">
+                            <h3>Christine Berley</h3>
                    
                     
-                </div>
+                        </div>
             
-            </div>
-            </div>
-            <div>
+                    </div>
+                </div>
+        <div>
             <div class="main">
                 <div class="sub-main">
                     <div class="row justify-content-center">
                     <button type="button" class="btn btn-outline-light">POST</button>
                     </div>
-                  </div>
-            </div></div>
+                </div>
+            </div>
+        </div>
         </section>
         
-
     </div>
+    <!-- Fim do canto direito do feed-->
+
+    <!--Inicio do Feed-->
   
-  <div id="div2" class="container mb-5 mt-5" id="postagens">
+  <div id="div2" class="col-md-6 col-sm-12 container mb-5 mt-5" id="postagens">
     <nav>
       <div
         class="nav  tama d-flex justify-content-center"
         id="nav-tab"
         role="tablist"
       >
-        <a
-          class="tamanho  nav-item nav-link active text-secondary font-weight-bold"
-          id="nav-todasPostagens-tab"
-          data-toggle="tab"
-          href="#todasPostagens"
-          role="tab"
-          aria-controls="nav-todasPostagens"
-          aria-selected="true"
-          >Todas as Postagens</a
-        >
+  
   
        
       </div>
@@ -130,7 +172,7 @@
           </div>
         </div>
       </div>
-   
+   <!--Fim do Feed-->
 
   
   
