--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -1,44 +1,40 @@
-<footer class="page-footer font-small bg-dark pt-4">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12 d-flex justify-content-center">
-                <h4 class="text-white">Siga-nos nas redes sociais</h4>
-
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12  d-flex justify-content-center">
-                <ul class= "social-network">
-                    <li>
-                        <a href="https://github.com/furandoabolha/Furando-a-Bolha" target="_blank" class="icoGitHub">
-                            <i class="fa fa-envelope" aria-hidden="true"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.linkedin.com/feed/" target="_blank" class="icoLinkedin">
-                        <i class = "fa fa-linkedin-square" aria-hidden="true"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/furandoabolha/Furando-a-Bolha" target="_blank" class="icoGitHub">
-                            <i class="fa fa-github-alt" aria-hidden="true"></i>
-                        </a>
-                    </li>
-
-
-                </ul>
-
-
-            </div>
-        </div>
-
-
-
+<footer class="page-footer font-small">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 d-flex justify-content-center">
+        <ul class="social-network m-0">
+          <li>
+            <a
+              href="https://mail.google.com/mail/u/0/#inbox?compose=new"
+              target="_blank"
+              class="icoGitHub"
+            >
+              <i class="fa fa-envelope-o" aria-hidden="true"></i>
+            </a>
+          </li>
+          <li>
+            <a
+              href="https://www.linkedin.com/feed/"
+              target="_blank"
+              class="icoLinkedin"
+            >
+              <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+            </a>
+          </li>
+          <li>
+            <a
+              href="https://www.instagram.com/generationbrasil/"
+              target="_blank"
+              class="icoInstagram"
+            >
+              <i class="fa fa-instagram" aria-hidden="true"></i>
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
-
-    <div class="footer-copyright bg-secondary text-center py-3">
-        <span class="text-light" >© 2021 Copyright: Furando a Bolha</span>
-
+    <div class="footer-copyright text-center">
+      <span class="text-light">furando a bolha ©</span>
     </div>
-
+  </div>
 </footer>
