Ajeitando o botao de sair

--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -5,6 +5,7 @@ a {
   font-family: "Bubbleboddy Neue Trial", sans-serif;
   font-weight: 200;
   color: red;
+  cursor: pointer; 
 }
 
 .margintananan{
