--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -79,7 +79,11 @@
 
     <ul class="navbar-nav ml-auto d-flex align-items-center mt-3">
       <li class="nav-item pl-3">
-        <a (click)= "sair()" class="m-0 font-weight-bold text-white fs-16" >Sair <i class="fa fa-sign-out" aria-hidden="true" ></i></a>
+        <a (click)= "sair()" class="m-0 font-weight-bold fs-16 text-muted" > 
+          <i class="material-icons">exit_to_app
+            <p>Sair</p>
+          </i>
+        </a>
       </li>
     </ul>
     <!--LI DOS ICONES DE POSTAGEM E TEMA  E SAIR -->
