--- a/src/app/entrar/entrar.component.html
+++ b/src/app/entrar/entrar.component.html
@@ -18,13 +18,13 @@
                         </div>
                     <div class="form-group">
                         <label for="usuario">E-mail</label>
-                        <input [(ngModel)]='usuarioLogin.email' class="form-control" type="text" name="usuario" id="usuario"
+                        <input [(ngModel)]='usuarioLogin.email' class=" linha" type="text" name="usuario" id="usuario"
                         >
                     </div>
 
                     <div class="form-group">
                         <label for="usuario">Senha</label>
-                        <input [(ngModel)]='usuarioLogin.senha' class="form-control" type="password" name="senha" id="senha"
+                        <input [(ngModel)]='usuarioLogin.senha' class="linha" type="password" name="senha" id="senha"
                         >
                     </div>
 
