Ajeitando responsividade do login

--- a/src/app/entrar/entrar.component.css
+++ b/src/app/entrar/entrar.component.css
@@ -10,7 +10,7 @@
    
         background-image: url('https://media.discordapp.net/attachments/890758555806859317/897994805404114994/Design_sem_nome_18.png?width=390&height=390');
         
-        min-height: 695px;
+        min-height: 100vh;
     
         
         background-repeat: no-repeat;
