--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light p-0  mb-0 sticky-top ">
+<nav class="navbar navbar-expand-lg navbar-light bg-white p-0  mb-0 sticky-top ">
   <button
     class="navbar-toggler"
     type="button"
