--- a/src/app/cadastrar/cadastrar.component.css
+++ b/src/app/cadastrar/cadastrar.component.css
@@ -1,10 +1,68 @@
+@import url("http://fonts.cdnfonts.com/css/bubbleboddy-neue-trial");
+*{
 
-#img-bg{
-    background-image: url('https://i.imgur.com/w3d95jN.jpg');
-    min-height: 695px;
+    font-family: 'Bubbleboddy Neue Trial';
+}
+body{
 
+    background-image: url('/assets/trummer.gif');
+    background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
 
+}
+
+
+
+    
+
+#border{
+
+    background-image: url('https://media.discordapp.net/attachments/890758555806859317/897994805404114994/Design_sem_nome_18.png?');
+    width: 100%;
+    min-height: 50vh;
+    border-radius: 30px;
+    display:list-item;
+    align-items:unset;
+    padding: 15px;
+    
+}
+.linha{
+
+    display: flex;
+  flex-direction: column;
+  padding: 5px;
+  margin-bottom: 30px;
+  background: transparent;
+  border: none;
+  border-bottom: 1px solid #160150; 
+  padding: 0;
+  margin: 0;
+  outline: none;
+  color: #8e8e94;
+  font-family: "Bubbleboddy Neue Trial", sans-serif;
+  font-weight: 200;
+
+  width: 450px;
+  
+  }
+
+  textarea:focus, input:focus, select:focus {
+    box-shadow: 0 0 0 0;
+   border-bottom: 1px solid #160150;
+    outline: 0;
+}
+
+.form{
+
+background: transparent;
+  border: none;
+  border-bottom: 1px solid #160150; 
+  width: 450px;
+  font-size: 16px;
+  color: #8e8e94;
+  font-family: "Bubbleboddy Neue Trial", sans-serif;
+  font-weight: 200;
+
+  
 }
