--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -1,26 +1,31 @@
-<div class="container-fluid">
+
+<body>
+    
+
+<div class="container">
     <div class="row">
-        <div class="col-md-6" id="img-bg">
 
-        </div>
-
-        <div class="col-md-6 mt-5 mb-5">
+        <div class="col-md-3"></div>
+       
+      
+        <div class=" col-md-6 mt-5 mb-5 bg-white" id="border">
+           
             <div class="row d-flex justify-content-center">
                 <div class="col-md-10">
                     <h1 class="text-center">Cadastro</h1>
 
                     <div class="form-group">
                         <label for="nome">Nome</label>
-                        <input [(ngModel)]="usuario.nome" type="text" class="form-control" name="nome" id="nome" placeholder="Seu nome">
+                        <input [(ngModel)]="usuario.nome" type="text" class="linha" name="nome" id="nome" >
 
                         <div class="form-group">
                             <label for="usuario">Email</label>
-                            <input [(ngModel)]="usuario.email" type="text" class="form-control" name="usuario" id="usuario" placeholder="Seu usuario">
+                            <input [(ngModel)]="usuario.email" type="text" class="linha" name="usuario" id="usuario" >
                         </div>
                         <div class="form-group">
                             <label for="foto">Link da Foto</label>
                             <input
-                              class="form-control"
+                              class="linha"
                               type="text"
                               name="foto"
                               id="foto"
@@ -31,29 +36,29 @@
 
                         <div class="form-group">
                             <label for="senha">Senha</label>
-                            <input (input)='confirmSenha($event)' type="password" class="form-control" name="senha" id="senha" placeholder="Sua senha">
+                            <input (input)='confirmSenha($event)' type="password" class="linha" name="senha" id="senha" >
                         </div>
 
                         <div class="form-group">
                             <label for="confirmSenha">Confirmar Senha</label>
-                            <input [(ngModel)]="usuario.senha" type="password" class="form-control" name="confirmSenha" id="confirmSenha" placeholder="Confirme sua senha">
+                            <input [(ngModel)]="usuario.senha" type="password" class="linha" name="confirmSenha" id="confirmSenha" >
                         </div>
 
                         <div class="form-group">
                             <label for="dataNascimento">Data de Nascimento</label>
                             <input 
-                            class="form-control" 
+                            class="form" 
                             type="date" 
                             name="dataNascimento" 
                             id="dataNascimento" 
-                            placeholder="dd/mm/aaaa"
+                            
                             [(ngModel)]='usuario.dataNascimento' />
                         </div>
     
                         <div class="form-group">
                             <label  for="tipo">Tipo do usuario</label>
                             <select (change)="tipoUser($event)"
-                            name="tipo" id="tipo" class="form-control">
+                            name="tipo" id="tipo" class="linha">
                             <option value="">Selecione o tipo de usuario</option>
                             <option value="normal">Normal</option>
                             <option value="admin">Admin</option>
@@ -63,8 +68,8 @@
 
 
                         <div class="d-flex justify-content-center">
-                            <button class="btn btn-danger mr-4" routerLink="/entrar">Cancelar</button>
-                            <button class="btn btn-success" (click)="cadastrar()" >Cadastrar</button>
+                            <button class="btn border-secondary mr-4" routerLink="/entrar">Cancelar</button>
+                            <button class="btn border-secondary mr-4" (click)="cadastrar()" >Cadastrar</button>
                         </div>
 
 
@@ -76,3 +81,5 @@
     </div>
 
 </div>
+ <div class="md-3"></div>
+</body>
