--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,68 +1,68 @@
 <!-- Começo do canto esquerdo do feed -->
 <div class="container-fluid bgBlue">
-  <div id="div1" class="col-md-3 col-sm-12 respon-1 sticky-top text-white">
-    <div class="margintoptitulo">
-      <div class="justify-content-center text-center">
-        <div><h3>O MAIS FURADOS</h3></div>
-        <div class="marginsub70"><h5>Trummer</h5></div>
-        <div class="marginsub70 text-left">
-          <p>
-            Os peixes são animais vertebrados, aquáticos, tipicamente
-            ectotérmicos, que possuem o corpo fusiforme, os membros
-            transformados em barbatanas ou nadadeiras ...
-          </p>
-        </div>
+  <div
+    id="div1"
+    class="col-md-3 col-sm-12 sticky-top text-white margintoptitulo">
+    <div class="justify-content-center text-center">
+      <div><h3>O MAIS FURADOS</h3></div>
+      <div class="marginsub70"><h5>Trummer</h5></div>
+      <div class="marginsub70 text-left">
+        <p>
+          Os peixes são animais vertebrados, aquáticos, tipicamente
+          ectotérmicos, que possuem o corpo fusiforme, os membros transformados
+          em barbatanas ou nadadeiras ...
+        </p>
       </div>
+    </div>
 
-      <div class="justify-content-center text-center">
-        <div class="marginsub70"><h5>Modesto</h5></div>
-        <div class="marginsub70 text-left">
-          <p>
-            Os peixes são animais vertebrados, aquáticos, tipicamente
-            ectotérmicos, que possuem o corpo fusiforme, os membros
-            transformados em barbatanas ou nadadeiras ...
-          </p>
-        </div>
+    <div class="justify-content-center text-center">
+      <div class="marginsub70"><h5>Modesto</h5></div>
+      <div class="marginsub70 text-left">
+        <p>
+          Os peixes são animais vertebrados, aquáticos, tipicamente
+          ectotérmicos, que possuem o corpo fusiforme, os membros transformados
+          em barbatanas ou nadadeiras ...
+        </p>
       </div>
+    </div>
 
-      <div>
-        <div class="container">
-          <div class="row">
-            <div class="col-md-12 d-flex justify-content-center">
-              <ul class="social-network m-0">
-                <li>
-                  <a
-                    href="https://mail.google.com/mail/u/0/#inbox?compose=new"
-                    target="_blank"
-                    class="icoGitHub"
-                  >
-                    <i class="fa fa-envelope-o" aria-hidden="true"></i>
-                  </a>
-                </li>
-                <li>
-                  <a
-                    href="https://www.linkedin.com/feed/"
-                    target="_blank"
-                    class="icoLinkedin"
-                  >
-                    <i class="fa fa-linkedin-square" aria-hidden="true"></i>
-                  </a>
-                </li>
-                <li>
-                  <a
-                    href="https://www.instagram.com/generationbrasil/"
-                    target="_blank"
-                    class="icoInstagram"
-                  >
-                    <i class="fa fa-instagram" aria-hidden="true"></i>
-                  </a>
-                </li>
-              </ul>
-            </div>
+    <div>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 d-flex justify-content-center">
+            <ul class="social-network m-0">
+              <li>
+                <a
+                  href="https://mail.google.com/mail/u/0/#inbox?compose=new"
+                  target="_blank"
+                  class="icoGitHub"
+                >
+                  <i class="fa fa-envelope-o" aria-hidden="true"></i>
+                </a>
+              </li>
+              <li>
+                <a
+                  href="https://www.linkedin.com/feed/"
+                  target="_blank"
+                  class="icoLinkedin"
+                >
+                  <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+                </a>
+              </li>
+              <li>
+                <a
+                  href="https://www.instagram.com/generationbrasil/"
+                  target="_blank"
+                  class="icoInstagram"
+                >
+                  <i class="fa fa-instagram" aria-hidden="true"></i>
+                </a>
+              </li>
+            </ul>
           </div>
-          <div class="footer-copyright text-center">
-            <span class="text-light">furando a bolha ©</span>
-          </div>
+        </div>
+        <div class="footer-copyright text-center">
+          <span class="text-light">furando a bolha ©</span>
         </div>
       </div>
     </div>
