--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -45,7 +45,7 @@
           </a>
         </form>
       </li>
-      
+    
 
       <!--LI DOS ICONES DE POSTAGEM E TEMA-->
       <li class="form-inline margintananan text-muted">
@@ -73,8 +73,15 @@
           </i>
         </a>
       </li>
-    </ul>
 
+      <li class="form-inline ml-5 text-muted text-center">
+        <a href="" class="text-muted" [routerLink]="['/contato']">
+          <i class="fa fa-envelope fa-lg" aria-hidden="true">
+            <p class="m-0">Contato</p>
+          </i>
+        </a>
+      </li>
+    </ul>
     
 
     <ul class="navbar-nav ml-auto d-flex align-items-center mt-3">
